Fixed a bunch of stuff

--- a/css/colors.css
+++ b/css/colors.css
@@ -65,10 +65,10 @@
   color: #8E44AD; }
 
 .bg-blue {
-  background-color: 4183D7; }
+  background-color: #4183D7; }
 
 .color-blue {
-  color: 4183D7; }
+  color: #4183D7; }
 
 .bg-marineblue {
   background-color: #446CB3; }
