--- a/css/layout.css
+++ b/css/layout.css
@@ -105,50 +105,6 @@ nav.nav-container {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
-section, .content-container {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto; }
-  section.aside-left, .content-container.aside-left {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-    -ms-flex-flow: row-reverse wrap;
-    flex-flow: row-reverse wrap; }
-  section > article, section > .content, section > aside, section > .aside, .content-container > article, .content-container > .content, .content-container > aside, .content-container > .aside {
-    z-index: 0; }
-  section > article, section > .content, .content-container > article, .content-container > .content {
-    -webkit-box-flex: 3;
-    -ms-flex: 3 0 80%;
-    flex: 3 0 80%; }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      section > article, section > .content, .content-container > article, .content-container > .content {
-        -webkit-box-flex: 3;
-        -ms-flex: 3 0 75%;
-        flex: 3 0 75%; } }
-    @media only screen and (min-width: 768px) and (max-width: 1023px) {
-      section > article, section > .content, .content-container > article, .content-container > .content {
-        -webkit-box-flex: 3;
-        -ms-flex: 3 0 70%;
-        flex: 3 0 70%; } }
-    section > article > div, section > .content > div, .content-container > article > div, .content-container > .content > div {
-      -webkit-box-flex: 1;
-      -ms-flex: 1;
-      flex: 1; }
-  section > aside, section > .aside, .content-container > aside, .content-container > .aside {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 0 20%;
-    flex: 1 0 20%; }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      section > aside, section > .aside, .content-container > aside, .content-container > .aside {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 25%;
-        flex: 1 0 25%; } }
-    @media only screen and (min-width: 768px) and (max-width: 1023px) {
-      section > aside, section > .aside, .content-container > aside, .content-container > .aside {
-        -webkit-box-flex: 1;
-        -ms-flex: 1 0 30%;
-        flex: 1 0 30%; } }
-
 /* Footer - <Footer>, .footer, #footer, etc. */
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
@@ -169,174 +125,13 @@ footer, .footer, #footer {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
-section, .content-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  section::after, .content-container::after {
-    display: block;
-    clear: both;
-    line-height: 0;
-    height: 0;
-    content: " "; }
-
-section > article, section > .content,
-.content-container > article, .content-container > .content,
-footer, .footer, #footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  section > article::after, section > .content::after,
-  .content-container > article::after, .content-container > .content::after,
-  footer::after, .footer::after, #footer::after {
-    display: block;
-    clear: both;
-    line-height: 0;
-    height: 0;
-    content: " "; }
+section {
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto; }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
-    section > article, section > .content,
-    .content-container > article, .content-container > .content,
-    footer, .footer, #footer {
-      width: 100%;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
-      -ms-flex-preferred-size: auto;
-      flex-basis: auto; } }
+    section {
+      max-width: 100%; } }
   @media only screen and (max-width: 480px) {
-    section > article, section > .content,
-    .content-container > article, .content-container > .content,
-    footer, .footer, #footer {
-      width: 100%;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
-      -ms-flex-preferred-size: auto;
-      flex-basis: auto; } }
-  section > article h1, section > article h2, section > article h3, section > article h4, section > article h5, section > article h6, section > .content h1, section > .content h2, section > .content h3, section > .content h4, section > .content h5, section > .content h6,
-  .content-container > article h1,
-  .content-container > article h2,
-  .content-container > article h3,
-  .content-container > article h4,
-  .content-container > article h5,
-  .content-container > article h6, .content-container > .content h1, .content-container > .content h2, .content-container > .content h3, .content-container > .content h4, .content-container > .content h5, .content-container > .content h6,
-  footer h1,
-  footer h2,
-  footer h3,
-  footer h4,
-  footer h5,
-  footer h6, .footer h1, .footer h2, .footer h3, .footer h4, .footer h5, .footer h6, #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
-    text-align: center;
-    padding-top: 0.625rem;
-    padding-bottom: 0.625rem;
-    padding-left: 0.625rem;
-    padding-right: 0.625rem; }
-  section > article p, section > article span, section > article blockquote, section > article div, section > article ul, section > article ol, section > .content p, section > .content span, section > .content blockquote, section > .content div, section > .content ul, section > .content ol,
-  .content-container > article p,
-  .content-container > article span,
-  .content-container > article blockquote,
-  .content-container > article div,
-  .content-container > article ul,
-  .content-container > article ol, .content-container > .content p, .content-container > .content span, .content-container > .content blockquote, .content-container > .content div, .content-container > .content ul, .content-container > .content ol,
-  footer p,
-  footer span,
-  footer blockquote,
-  footer div,
-  footer ul,
-  footer ol, .footer p, .footer span, .footer blockquote, .footer div, .footer ul, .footer ol, #footer p, #footer span, #footer blockquote, #footer div, #footer ul, #footer ol {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-    padding-left: 1.25rem;
-    padding-right: 1.25rem; }
-    @media only screen and (min-width: 480px) and (max-width: 767px) {
-      section > article p, section > article span, section > article blockquote, section > article div, section > article ul, section > article ol, section > .content p, section > .content span, section > .content blockquote, section > .content div, section > .content ul, section > .content ol,
-      .content-container > article p,
-      .content-container > article span,
-      .content-container > article blockquote,
-      .content-container > article div,
-      .content-container > article ul,
-      .content-container > article ol, .content-container > .content p, .content-container > .content span, .content-container > .content blockquote, .content-container > .content div, .content-container > .content ul, .content-container > .content ol,
-      footer p,
-      footer span,
-      footer blockquote,
-      footer div,
-      footer ul,
-      footer ol, .footer p, .footer span, .footer blockquote, .footer div, .footer ul, .footer ol, #footer p, #footer span, #footer blockquote, #footer div, #footer ul, #footer ol {
-        width: 100%;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-        flex-flow: column wrap;
-        -ms-flex-preferred-size: auto;
-        flex-basis: auto; } }
-    @media only screen and (max-width: 480px) {
-      section > article p, section > article span, section > article blockquote, section > article div, section > article ul, section > article ol, section > .content p, section > .content span, section > .content blockquote, section > .content div, section > .content ul, section > .content ol,
-      .content-container > article p,
-      .content-container > article span,
-      .content-container > article blockquote,
-      .content-container > article div,
-      .content-container > article ul,
-      .content-container > article ol, .content-container > .content p, .content-container > .content span, .content-container > .content blockquote, .content-container > .content div, .content-container > .content ul, .content-container > .content ol,
-      footer p,
-      footer span,
-      footer blockquote,
-      footer div,
-      footer ul,
-      footer ol, .footer p, .footer span, .footer blockquote, .footer div, .footer ul, .footer ol, #footer p, #footer span, #footer blockquote, #footer div, #footer ul, #footer ol {
-        width: 100%;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-        flex-flow: column wrap;
-        -ms-flex-preferred-size: auto;
-        flex-basis: auto; } }
-
-section > aside::after, section > .aside::after,
-.content-container > aside::after, .content-container > .aside::after {
-  display: block;
-  clear: both;
-  line-height: 0;
-  height: 0;
-  content: " "; }
-
-section > aside p, section > aside span, section > aside blockquote, section > aside div, section > aside ul, section > aside ol, section > .aside p, section > .aside span, section > .aside blockquote, section > .aside div, section > .aside ul, section > .aside ol,
-.content-container > aside p,
-.content-container > aside span,
-.content-container > aside blockquote,
-.content-container > aside div,
-.content-container > aside ul,
-.content-container > aside ol, .content-container > .aside p, .content-container > .aside span, .content-container > .aside blockquote, .content-container > .aside div, .content-container > .aside ul, .content-container > .aside ol {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem; }
-
-section > aside h1, section > aside h2, section > aside h3, section > aside h4, section > aside h5, section > aside h6, section > .aside h1, section > .aside h2, section > .aside h3, section > .aside h4, section > .aside h5, section > .aside h6,
-.content-container > aside h1,
-.content-container > aside h2,
-.content-container > aside h3,
-.content-container > aside h4,
-.content-container > aside h5,
-.content-container > aside h6, .content-container > .aside h1, .content-container > .aside h2, .content-container > .aside h3, .content-container > .aside h4, .content-container > .aside h5, .content-container > .aside h6 {
-  text-align: center;
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-  padding-left: 0.625rem;
-  padding-right: 0.625rem; }
+    section {
+      max-width: 100%; } }
