--- a/scss/colors/_colors.scss
+++ b/scss/colors/_colors.scss
@@ -10,7 +10,7 @@ $colors: (
   pink: "#D2527F",
   purple: "#663399",
   studiopurple: "#8E44AD",
-  blue: "4183D7",
+  blue: "#4183D7",
   marineblue: "#446CB3",
   deepblue: "#013243",
   lightblue: "#6BB9F0",
