--- a/css/classes-layout.css
+++ b/css/classes-layout.css
@@ -43,6 +43,13 @@
       -ms-flex-flow: column-reverse wrap;
       flex-flow: column-reverse wrap; }
 
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .flex-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column wrap;
+    flex-flow: column wrap; } }
+
 @media only screen and (max-width: 480px) {
   .flex-container {
     -webkit-box-orient: vertical;
@@ -53,17 +60,7 @@
 .flex-container > .column-1 {
   -webkit-box-flex: 1;
   -ms-flex: 1 0 100%;
-  flex: 1 0 100%;
-  max-width: 100vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-1 {
-      min-width: 100%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-1 {
-      min-width: 1583px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-1 {
-      min-width: 1007px; } }
+  flex: 1 0 100%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-1 {
@@ -77,17 +74,7 @@
 .flex-container > .column-2 {
   -webkit-box-flex: 2;
   -ms-flex: 2 0 50%;
-  flex: 2 0 50%;
-  max-width: 50vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-2 {
-      min-width: 50%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-2 {
-      min-width: 783px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-2 {
-      min-width: 495px; } }
+  flex: 2 0 50%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-2 {
@@ -101,17 +88,13 @@
 .flex-container > .column-3 {
   -webkit-box-flex: 3;
   -ms-flex: 3 0 33.33333%;
-  flex: 3 0 33.33333%;
-  max-width: 33.33333vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-3 {
-      min-width: 33.33333%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-3 {
-      min-width: 516.33333px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-3 {
-      min-width: 324.33333px; } }
+  flex: 3 0 33.33333%; }
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .flex-container .column-3 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-3 {
@@ -125,26 +108,19 @@
 .flex-container > .column-4 {
   -webkit-box-flex: 4;
   -ms-flex: 4 0 25%;
-  flex: 4 0 25%;
-  max-width: 25vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-4 {
-      min-width: 25%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-4 {
-      min-width: 383px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-4 {
-      min-width: 239px; } }
+  flex: 4 0 25%; }
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .flex-container .column-4 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .flex-container .column-4 {
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    -ms-flex-negative: auto;
-    flex-shrink: auto;
-    max-width: 100%;
-    width: 100%; } }
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-4 {
@@ -158,26 +134,19 @@
 .flex-container > .column-5 {
   -webkit-box-flex: 5;
   -ms-flex: 5 0 20%;
-  flex: 5 0 20%;
-  max-width: 20vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-5 {
-      min-width: 20%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-5 {
-      min-width: 303px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-5 {
-      min-width: 187.8px; } }
+  flex: 5 0 20%; }
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .flex-container .column-5 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .flex-container .column-5 {
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    -ms-flex-negative: auto;
-    flex-shrink: auto;
-    max-width: 100%;
-    width: 100%; } }
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-5 {
@@ -191,26 +160,19 @@
 .flex-container > .column-6 {
   -webkit-box-flex: 6;
   -ms-flex: 6 0 16.66667%;
-  flex: 6 0 16.66667%;
-  max-width: 16.66667vmax; }
-  @media only screen and (min-width: 1920px) {
-    .flex-container > .column-6 {
-      min-width: 16.66667%; } }
-  @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-    .flex-container > .column-6 {
-      min-width: 249.66667px; } }
-  @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .flex-container > .column-6 {
-      min-width: 153.66667px; } }
+  flex: 6 0 16.66667%; }
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .flex-container .column-6 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .flex-container .column-6 {
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-    -ms-flex-negative: auto;
-    flex-shrink: auto;
-    max-width: 100%;
-    width: 100%; } }
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%; } }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-6 {
@@ -225,8 +187,7 @@
 .grid-container {
   display: grid;
   grid-auto-flow: row;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  max-width: 100%; }
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .grid-container {
       grid-auto-columns: 100%; } }
@@ -248,6 +209,9 @@
 
 .grid-container > .column-4 {
   grid-column: span 3; }
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .grid-container > .column-4 {
+      grid-column: span 12; } }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .grid-container > .column-4 {
       grid-column: span 12; } }
@@ -257,6 +221,9 @@
 
 .grid-container > .column-5 {
   grid-column: span 2; }
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .grid-container > .column-5 {
+      grid-column: span 12; } }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .grid-container > .column-5 {
       grid-column: span 12; } }
@@ -271,7 +238,7 @@
       grid-column: span 2; } }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .grid-container > .column-6 {
-      grid-column: span 2; } }
+      grid-column: span 12; } }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .grid-container > .column-6 {
       grid-column: span 12; } }
@@ -281,9 +248,7 @@
 
 /* Percentage Container */
 .p-container {
-  max-width: 100%;
-  min-width: 100%;
-  width: 100vw; }
+  width: 100%; }
   .p-container::after {
     display: block;
     clear: both;
@@ -294,15 +259,6 @@
     max-width: 100%;
     width: 100%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-1 {
-        min-width: 1600px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-1 {
-        min-width: 1024px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-1 {
-        min-width: 768px; } }
     .p-container > .column-1::after {
       display: block;
       clear: both;
@@ -310,18 +266,9 @@
       height: 0;
       content: " "; }
   .p-container > .column-2 {
-    max-width: 50%;
+    max-width: 100%;
     width: 50%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-2 {
-        min-width: 800px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-2 {
-        min-width: 512px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-2 {
-        min-width: 384px; } }
     .p-container > .column-2::after {
       display: block;
       clear: both;
@@ -329,18 +276,9 @@
       height: 0;
       content: " "; }
   .p-container > .column-3 {
-    max-width: 33.33333%;
+    max-width: 100%;
     width: 33.33333%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-3 {
-        min-width: 533.33333px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-3 {
-        min-width: 341.33333px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-3 {
-        min-width: 256px; } }
     .p-container > .column-3::after {
       display: block;
       clear: both;
@@ -352,24 +290,19 @@
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-4 {
-    max-width: 25%;
+    max-width: 100%;
     width: 25%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-4 {
-        min-width: 400px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-4 {
-        min-width: 256px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-4 {
-        min-width: 192px; } }
     .p-container > .column-4::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+      .p-container > .column-4 {
+        max-width: 100%;
+        width: 100%; } }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
       .p-container > .column-4 {
         max-width: 100%;
@@ -379,24 +312,19 @@
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-5 {
-    max-width: 20%;
+    max-width: 100%;
     width: 20%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-5 {
-        min-width: 320px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-5 {
-        min-width: 204.8px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-5 {
-        min-width: 153.6px; } }
     .p-container > .column-5::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+      .p-container > .column-5 {
+        max-width: 100%;
+        width: 100%; } }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
       .p-container > .column-5 {
         max-width: 100%;
@@ -406,24 +334,19 @@
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-6 {
-    max-width: 16.66667%;
+    max-width: 100%;
     width: 16.66667%;
     float: left; }
-    @media only screen and (min-width: 1920px) {
-      .p-container > .column-6 {
-        min-width: 266.66667px; } }
-    @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container > .column-6 {
-        min-width: 170.66667px; } }
-    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container > .column-6 {
-        min-width: 128px; } }
     .p-container > .column-6::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+      .p-container > .column-6 {
+        max-width: 100%;
+        width: 100%; } }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
       .p-container > .column-6 {
         max-width: 100%;
