--- a/test/layout.pug
+++ b/test/layout.pug
@@ -30,8 +30,8 @@ main
             a(href='#') Contact
           li
             a(href='#') Support
-  section
-    article
+  section.grid-container
+    article.column-2
       div
         h3 Section / Content
         p
@@ -58,10 +58,23 @@ main
             | Provident explicabo ducimus eligendi dolor ullam officiis, dolorem. Error, odio, vero. Autem aliquam earum nisi assumenda quae cum tempora ex accusamus ratione esse explicabo, maiores sapiente molestiae harum aliquid fugit.
           span
             | Eius, non. Earum qui quasi, iste ab natus consectetur expedita voluptates nesciunt non enim magnam, ipsa cupiditate dignissimos eos recusandae tempore ipsum dolor aperiam laborum voluptatem. Eligendi, voluptate quo explicabo.
-    aside
+    aside.column-4
       h3 Aside / Sidebar
       p
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto corporis, aperiam iste sint recusandae. Debitis, eligendi blanditiis, voluptatibus aut dolore ratione aperiam impedit ipsum necessitatibus odio, sequi magnam, ex consequatur.
+        
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
+    article.column-6 Test
   footer
     div
       h3 Menu
