--- a/css/classes.css
+++ b/css/classes.css
@@ -4,9 +4,15 @@
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 /* Helper  */
 .block-center {
   display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+ul.block-center {
+  display: table;
   margin-left: auto;
   margin-right: auto; }
 
@@ -164,16 +170,16 @@ html[xmlns] .cf {
     .hide-big-desktop {
       display: none; } }
   @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .hide-desktop, .hide-big-desktop {
+    .hide-desktop, .hide-big-desktop, .show-big-desktop {
       display: none; } }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
-    .hide-tab-x, .hide-big-desktop, .hide-desktop {
+    .hide-tab-x, .hide-big-desktop, .hide-desktop, .show-big-desktop {
       display: none; } }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
-    .hide-tablet, .hide-big-desktop, .hide-desktop, .hide-tab-x {
+    .hide-tablet, .hide-big-desktop, .hide-desktop, .show-big-desktop, .hide-tab-x {
       display: none; } }
   @media only screen and (max-width: 480px) {
-    .hide-phone, .hide-big-desktop, .hide-desktop, .hide-tab-x, .hide-tablet {
+    .hide-phone, .hide-big-desktop, .hide-desktop, .show-big-desktop, .hide-tab-x, .hide-tablet {
       display: none; } }
   .hide-ie {
     display: none\9;
@@ -371,9 +377,9 @@ html[xmlns] .cf {
     flex-flow: column nowrap; } }
 
 .flex-container > .column-1 {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 100%;
-  flex: 1 0 100%; }
+  -webkit-box-flex: 12;
+  -ms-flex: 12 0 100%;
+  flex: 12 0 100%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-1 {
@@ -385,9 +391,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-2 {
-  -webkit-box-flex: 2;
-  -ms-flex: 2 0 50%;
-  flex: 2 0 50%; }
+  -webkit-box-flex: 6;
+  -ms-flex: 6 0 50%;
+  flex: 6 0 50%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-2 {
@@ -399,9 +405,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-3 {
-  -webkit-box-flex: 3;
-  -ms-flex: 3 0 33.33333%;
-  flex: 3 0 33.33333%; }
+  -webkit-box-flex: 4;
+  -ms-flex: 4 0 33.33333%;
+  flex: 4 0 33.33333%; }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .flex-container .column-3 {
@@ -419,9 +425,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-4 {
-  -webkit-box-flex: 4;
-  -ms-flex: 4 0 25%;
-  flex: 4 0 25%; }
+  -webkit-box-flex: 3;
+  -ms-flex: 3 0 25%;
+  flex: 3 0 25%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-4 {
@@ -445,9 +451,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-5 {
-  -webkit-box-flex: 5;
-  -ms-flex: 5 0 20%;
-  flex: 5 0 20%; }
+  -webkit-box-flex: 2.4;
+  -ms-flex: 2.4 0 20%;
+  flex: 2.4 0 20%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-5 {
@@ -471,9 +477,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-6 {
-  -webkit-box-flex: 6;
-  -ms-flex: 6 0 16.66667%;
-  flex: 6 0 16.66667%; }
+  -webkit-box-flex: 2;
+  -ms-flex: 2 0 16.66667%;
+  flex: 2 0 16.66667%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-6 {
@@ -569,8 +575,8 @@ html[xmlns] .cf {
     height: 0;
     content: " "; }
   .p-container > .column-1 {
+    min-width: 100%;
     max-width: 100%;
-    width: 100%;
     float: left; }
     .p-container > .column-1::after {
       display: block;
@@ -579,8 +585,8 @@ html[xmlns] .cf {
       height: 0;
       content: " "; }
   .p-container > .column-2 {
+    min-width: 50%;
     max-width: 100%;
-    width: 50%;
     float: left; }
     .p-container > .column-2::after {
       display: block;
@@ -589,8 +595,8 @@ html[xmlns] .cf {
       height: 0;
       content: " "; }
   .p-container > .column-3 {
+    min-width: 33.33333%;
     max-width: 100%;
-    width: 33.33333%;
     float: left; }
     .p-container > .column-3::after {
       display: block;
@@ -603,8 +609,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-4 {
+    min-width: 25%;
     max-width: 100%;
-    width: 25%;
     float: left; }
     .p-container > .column-4::after {
       display: block;
@@ -625,8 +631,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-5 {
+    min-width: 20%;
     max-width: 100%;
-    width: 20%;
     float: left; }
     .p-container > .column-5::after {
       display: block;
@@ -647,8 +653,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-6 {
+    min-width: 16.66667%;
     max-width: 100%;
-    width: 16.66667%;
     float: left; }
     .p-container > .column-6::after {
       display: block;
@@ -656,6 +662,9 @@ html[xmlns] .cf {
       line-height: 0;
       height: 0;
       content: " "; }
+    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
+      .p-container > .column-6 {
+        min-width: 33.33333%; } }
     @media only screen and (min-width: 768px) and (max-width: 1023px) {
       .p-container > .column-6 {
         max-width: 100%;
