--- a/css/formatting.css
+++ b/css/formatting.css
@@ -3,6 +3,7 @@
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 @media only screen and (min-width: 1920px) {
   h1 {
     font-size: 2rem; } }
