--- a/test/classes.pug
+++ b/test/classes.pug
@@ -438,3 +438,9 @@ head
     | .text-col-6
     | .text-col-6
     | .text-col-6
+    
+.flex-container#stretch-test
+  .column-1 STRETCH TESTS
+  .column-2 .column-2
+  .column-4 .column-4
+  .column-3 .column-3
