--- a/test/colors.pug
+++ b/test/colors.pug
@@ -4,28 +4,61 @@ head
   meta(content='width=device-width, initial-scale=1.00002', name='viewport')
   title Lib
   link(href='../css/library.css', rel='stylesheet')
-  style.
-    .column-4 {
-    padding: 20px;
-    }
 
 .grid-container#colors
-  .column-4.bg-white .bg-white
-  .column-4.bg-gray .bg-gray
-  .column-4.bg-black .bg-black
-  .column-4.bg-red .bg-red
-  .column-4.bg-burntorange .bg-burntorange
-  .column-4.bg-crustred .bg-crustred
-  .column-4.bg-orange .bg-orange
-  .column-4.bg-caliorange .bg-caliorange
-  .column-4.bg-pink .bg-pink
-  .column-4.bg-purple .bg-purple
-  .column-4.bg-studiopurple .bg-studiopurple
-  .column-4.bg-blue .bg-blue
-  .column-4.bg-marineblue .bg-marineblue
-  .column-4.bg-deepblue .bg-deepblue
-  .column-4.bg-lightblue .bg-lightblue
-  .column-4.bg-green .bg-green
-  .column-4.bg-gossipgreen .bg-gossipgreen
-  .column-4.bg-salemgreen .bg-salemgreen
-  .column-4.bg-yellow .bg-yellow
+  .column-1.bg-white.push-p
+    p .bg-white
+    
+  .column-1.bg-gray.push-p
+    p .bg-gray
+    
+  .column-1.bg-black.push-p
+    p .bg-black
+    
+  .column-1.bg-red.push-p
+    p .bg-red
+    
+  .column-1.bg-burntorange.push-p
+    p .bg-burntorange
+    
+  .column-1.bg-crustred.push-p
+    p .bg-crustred
+    
+  .column-1.bg-orange.push-p
+    p .bg-orange
+    
+  .column-1.bg-caliorange.push-p
+    p .bg-caliorange
+    
+  .column-1.bg-pink.push-p
+    p .bg-pink
+    
+  .column-1.bg-purple.push-p
+    p .bg-purple
+    
+  .column-1.bg-studiopurple.push-p
+    p .bg-studiopurple
+    
+  .column-1.bg-blue.push-p
+    p .bg-blue
+    
+  .column-1.bg-marineblue.push-p
+    p .bg-marineblue
+    
+  .column-1.bg-deepblue.push-p
+    p .bg-deepblue
+    
+  .column-1.bg-lightblue.push-p
+    p .bg-lightblue
+    
+  .column-1.bg-green.push-p
+    p .bg-green
+    
+  .column-1.bg-gossipgreen.push-p
+    p .bg-gossipgreen
+    
+  .column-1.bg-salemgreen.push-p
+    p .bg-salemgreen
+    
+  .column-1.bg-yellow.push-p
+    p .bg-yellow
