--- a/test/layout.pug
+++ b/test/layout.pug
@@ -30,7 +30,7 @@ main
             a(href='#') Contact
           li
             a(href='#') Support
-  section.grid-container
+  section.flex-container
     article.column-2
       div
         h3 Section / Content
@@ -62,19 +62,6 @@ main
       h3 Aside / Sidebar
       p
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto corporis, aperiam iste sint recusandae. Debitis, eligendi blanditiis, voluptatibus aut dolore ratione aperiam impedit ipsum necessitatibus odio, sequi magnam, ex consequatur.
-        
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
-    article.column-6 Test
   footer
     div
       h3 Menu
