--- a/css/library.css
+++ b/css/library.css
@@ -505,6 +505,7 @@ body {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 .bg-white {
   background-color: #ECF0F1; }
 
@@ -624,6 +625,7 @@ body {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 @media only screen and (min-width: 1920px) {
   h1 {
     font-size: 2rem; } }
@@ -836,9 +838,15 @@ a.message, a.blue {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 /* Helper  */
 .block-center {
   display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+ul.block-center {
+  display: table;
   margin-left: auto;
   margin-right: auto; }
 
@@ -996,16 +1004,16 @@ html[xmlns] .cf {
     .hide-big-desktop {
       display: none; } }
   @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-    .hide-desktop, .hide-big-desktop {
+    .hide-desktop, .hide-big-desktop, .show-big-desktop {
       display: none; } }
   @media only screen and (min-width: 768px) and (max-width: 1023px) {
-    .hide-tab-x, .hide-big-desktop, .hide-desktop {
+    .hide-tab-x, .hide-big-desktop, .hide-desktop, .show-big-desktop {
       display: none; } }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
-    .hide-tablet, .hide-big-desktop, .hide-desktop, .hide-tab-x {
+    .hide-tablet, .hide-big-desktop, .hide-desktop, .show-big-desktop, .hide-tab-x {
       display: none; } }
   @media only screen and (max-width: 480px) {
-    .hide-phone, .hide-big-desktop, .hide-desktop, .hide-tab-x, .hide-tablet {
+    .hide-phone, .hide-big-desktop, .hide-desktop, .show-big-desktop, .hide-tab-x, .hide-tablet {
       display: none; } }
   .hide-ie {
     display: none\9;
@@ -1203,9 +1211,9 @@ html[xmlns] .cf {
     flex-flow: column nowrap; } }
 
 .flex-container > .column-1 {
-  -webkit-box-flex: 1;
-  -ms-flex: 1 0 100%;
-  flex: 1 0 100%; }
+  -webkit-box-flex: 12;
+  -ms-flex: 12 0 100%;
+  flex: 12 0 100%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-1 {
@@ -1217,9 +1225,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-2 {
-  -webkit-box-flex: 2;
-  -ms-flex: 2 0 50%;
-  flex: 2 0 50%; }
+  -webkit-box-flex: 6;
+  -ms-flex: 6 0 50%;
+  flex: 6 0 50%; }
 
 @media only screen and (max-width: 480px) {
   .flex-container .column-2 {
@@ -1231,9 +1239,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-3 {
-  -webkit-box-flex: 3;
-  -ms-flex: 3 0 33.33333%;
-  flex: 3 0 33.33333%; }
+  -webkit-box-flex: 4;
+  -ms-flex: 4 0 33.33333%;
+  flex: 4 0 33.33333%; }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .flex-container .column-3 {
@@ -1251,9 +1259,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-4 {
-  -webkit-box-flex: 4;
-  -ms-flex: 4 0 25%;
-  flex: 4 0 25%; }
+  -webkit-box-flex: 3;
+  -ms-flex: 3 0 25%;
+  flex: 3 0 25%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-4 {
@@ -1277,9 +1285,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-5 {
-  -webkit-box-flex: 5;
-  -ms-flex: 5 0 20%;
-  flex: 5 0 20%; }
+  -webkit-box-flex: 2.4;
+  -ms-flex: 2.4 0 20%;
+  flex: 2.4 0 20%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-5 {
@@ -1303,9 +1311,9 @@ html[xmlns] .cf {
     width: 100%; } }
 
 .flex-container > .column-6 {
-  -webkit-box-flex: 6;
-  -ms-flex: 6 0 16.66667%;
-  flex: 6 0 16.66667%; }
+  -webkit-box-flex: 2;
+  -ms-flex: 2 0 16.66667%;
+  flex: 2 0 16.66667%; }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .flex-container .column-6 {
@@ -1401,8 +1409,8 @@ html[xmlns] .cf {
     height: 0;
     content: " "; }
   .p-container > .column-1 {
+    min-width: 100%;
     max-width: 100%;
-    width: 100%;
     float: left; }
     .p-container > .column-1::after {
       display: block;
@@ -1411,8 +1419,8 @@ html[xmlns] .cf {
       height: 0;
       content: " "; }
   .p-container > .column-2 {
+    min-width: 50%;
     max-width: 100%;
-    width: 50%;
     float: left; }
     .p-container > .column-2::after {
       display: block;
@@ -1421,8 +1429,8 @@ html[xmlns] .cf {
       height: 0;
       content: " "; }
   .p-container > .column-3 {
+    min-width: 33.33333%;
     max-width: 100%;
-    width: 33.33333%;
     float: left; }
     .p-container > .column-3::after {
       display: block;
@@ -1435,8 +1443,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-4 {
+    min-width: 25%;
     max-width: 100%;
-    width: 25%;
     float: left; }
     .p-container > .column-4::after {
       display: block;
@@ -1457,8 +1465,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-5 {
+    min-width: 20%;
     max-width: 100%;
-    width: 20%;
     float: left; }
     .p-container > .column-5::after {
       display: block;
@@ -1479,8 +1487,8 @@ html[xmlns] .cf {
         max-width: 100%;
         width: 100%; } }
   .p-container > .column-6 {
+    min-width: 16.66667%;
     max-width: 100%;
-    width: 16.66667%;
     float: left; }
     .p-container > .column-6::after {
       display: block;
@@ -1488,6 +1496,9 @@ html[xmlns] .cf {
       line-height: 0;
       height: 0;
       content: " "; }
+    @media only screen and (min-width: 1024px) and (max-width: 1599px) {
+      .p-container > .column-6 {
+        min-width: 33.33333%; } }
     @media only screen and (min-width: 768px) and (max-width: 1023px) {
       .p-container > .column-6 {
         max-width: 100%;
@@ -1701,6 +1712,7 @@ html[xmlns] .cf {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 main, .wrapper {
   width: 100vw;
   max-width: 100% !important;
@@ -1727,6 +1739,7 @@ header {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 /* Start nav */
 nav.nav-container {
   width: 100%;
@@ -1802,12 +1815,14 @@ nav.nav-container {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 /* Footer - <Footer>, .footer, #footer, etc. */
 /* MARGIN MIXINS */
 /* PADDING MIXINS */
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 footer, .footer, #footer {
   max-width: 100%;
   width: 100%; }
@@ -1822,6 +1837,7 @@ footer, .footer, #footer {
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 section {
   max-width: 1400px;
   margin-left: auto;
