--- a/css/templates.css
+++ b/css/templates.css
@@ -478,6 +478,7 @@ article, aside, audio, canvas, command, details, embed, figcaption, figure, foot
 /* CLEARFIX MIXIN */
 /* MIN HEIGHT */
 /* PUSH */
+/* Fill Available */
 html, body, main, .wrapper {
   max-width: 100%;
   width: 100%;
